--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Rufina:400,700" rel="stylesheet">
 
-	<title>CarVilla</title>
+	<title>Car Details By Nisarg Chaudhary</title>
 
 <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
 
@@ -51,7 +51,7 @@
 								data-target="#navbar-menu">
 								<i class="fa fa-bars"></i>
 							</button>
-							<a class="navbar-brand" href="index.html">carvilla<span></span></a>
+							<a class="navbar-brand" href="index.html">Car Details By Nisarg Chaudhary<span></span></a>
 
 						</div>
 						<div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
@@ -459,7 +459,7 @@
 					<div class="col-md-3 col-sm-6">
 						<div class="single-footer-widget">
 							<div class="footer-logo">
-								<a href="index.html">carvilla</a>
+								<a href="index.html">Car Details</a>
 							</div>
 							<p>
 								Ased do eiusm tempor incidi ut labore et dolore magnaian aliqua. Ut enim ad minim
