[ADD] New Cart Web add

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Rufina:400,700" rel="stylesheet">
 
-	<title>Car Details By Nisarg Chaudhary</title>
+	<title>Car Details By Nisarg</title>
 
 <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
 
@@ -51,7 +51,7 @@
 								data-target="#navbar-menu">
 								<i class="fa fa-bars"></i>
 							</button>
-							<a class="navbar-brand" href="index.html">Car Details By Nisarg Chaudhary<span></span></a>
+							<a class="navbar-brand" href="index.html">Car Details By Nisarg<span></span></a>
 
 						</div>
 						<div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
